# nubot_ws

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/gscam/: gscam
doc/: README.md  nubot_name_config.doc  readme.md  vision_calibration.txt
install/: README.md  nubot_setting.sh  opencv-install.sh  qt-ros-plugin-install.sh  ros-install.sh  setting-install.sh  tiscamera-install.sh  锁屏设置
robot_control/: behaviour.cpp  behaviour.hpp  bezier.cpp  fuzzypid.cpp  subtargets.cpp
src-build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
src-build/atomic_configure/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src-build/calibration_util/: CTestTestfile.cmake  Makefile  calibration_util.cbp  cmake_install.cmake  ui_calibration_dialog.h
src-build/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
src/calibration_util/: CMakeLists.txt  CTestTestfile.cmake  Makefile  calibration_util.launch  cmake_install.cmake  package.xml
src/calibration_util/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
src/calibration_util/catkin_generated/installspace/: calibration_util.pc  calibration_utilConfig.cmake
src/calibration_util/include/calibration_util/: calibration_dialog.h  fieldinformation.h  moc_calibration_dialog.cpp_parameters
src/calibration_util/src/: calibration_dialog.cpp  calibration_dialog.ui  calibration_dialog.ui.autosave  errortable.cpp  fieldinformation.cpp  image_subscribe.cpp  main.cpp
(+709 files in other folders)
